snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.pom.sha512
305a026ac1d702d76fdfda95ee708800366271b908e692f1008a9f1107d18691f2ffdd99910baa9bede6849363ba42e8e6a7b8d96c0af4db1d24c4773c18945c